<resources>

    <string name="app_name">Web</string>
    <string name="input_url">请输入地址：</string>
    <string name="bt_view_text">查看</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_file">请输上传的入文件路径</string>
    <string name="bt_get_login">采用get方式登陆</string>
    <string name="bt_post_login">采用post方式登陆</string>
    <string name="bt_httpclient_get_login">采用HttpClientGet方式登陆</string>
    <string name="bt_httpclient_post_login">采用HttpClientPost方式登陆</string>
    <string name="bt_httpclient_login">采用HttpClient夹带文件的方式登陆</string>
    <string name="download">下载</string>
    <string name="start_downloading">开始下载</string>
    <string name="is_downloading">正在下载...</string>
    <string name="pause">暂停</string>
    <string name="input_download_url">请输入下载文件的路径</string>

</resources>